<resources>
    <string name="app_name">My Note App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No Data</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort by</string>
    <string name="priority_high">Priority High</string>
    <string name="priority_low">Priority Low</string>
    <string name="delete_all">Delete All</string>
    <string name="Change_Background">Change Background</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string name="forest">Forest</string>
    <string name="orange">Orange</string>
    <string name="hemp">Hemp</string>
    <string name="forestButton">Forest_button</string>

    <string-array name="priorities">

        <item>Urgent</item>
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
        <item>Reminder</item>

    </string-array>

</resources>