<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView"/>

    <group android:checkableBehavior="single">
        <item
          android:id="@+id/sort_by"
          android:title="@string/sort_by">
          <menu>
              <item android:id="@+id/menu_priority_high"
                  android:title="@string/priority_high"/>

                  <item
                      android:id="@+id/menu_priority_low"
                      android:title="@string/priority_low"/>
          </menu>

      </item>
    </group>

    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never"/>
    <group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_change_bg"
            android:checkable="false"
            android:title="@string/Change_Background">
            <menu>

                <item
                    android:id="@+id/bg_forest"
                    android:title="@string/forest"
                    android:checkable="true"
                    />
                <item
                    android:id="@+id/forest_subButton"
                    android:title="@string/forestButton"
                    android:checkable="true"
                    app:actionProviderClass="androidx.mediarouter.app.MediaRouteActionProvider"
                    tools:icon="@drawable/mr_button_light" />
                <item
                    android:id="@+id/bg_orange"
                    android:title="@string/orange" />
                <item
                    android:id="@+id/bg_hemp"
                    android:title="@string/hemp" />
            </menu>
        </item>
    </group>

</menu>